@@ -43,6 +43,13 @@
 	* gcc.dg/ubsan/c99-shift-2.c: New test.
 	* gcc.dg/ubsan/c99-shift-1.c: New test.
 
+2013-04-05  Greta Yorsh  <Greta.Yorsh@arm.com>
+
+	* gcc.target/arm/negdi-1.c: New test.
+	* gcc.target/arm/negdi-2.c: Likewise.
+	* gcc.target/arm/negdi-3.c: Likewise.
+	* gcc.target/arm/negdi-4.c: Likewise.
+
 2013-03-01  Richard Biener  <rguenther@suse.de>
 
 	Backport from mainline
